[#1547] Fix p-l content tab & gap accordion mobile view

--- a/frontend/src/pages/landing/index.module.scss
+++ b/frontend/src/pages/landing/index.module.scss
@@ -213,7 +213,7 @@
     .ant-collapse {
       display: flex;
       flex-direction: column;
-      gap: 8px;
+      gap: 24px;
     }
     .ant-collapse-header {
       flex-direction: row-reverse;
@@ -259,7 +259,7 @@
         }
       }
     }
-    .ant-tabs .ant-tabs-tab-active .p-l {
+    .p-l {
       line-height: 34px;
     }
     .ant-tabs .ant-tabs-tab-active,
